Simplify self-hosting setup (#581)
Auto-generate secrets (APP_KEY, IMGPROXY_KEY, IMGPROXY_SALT) on first
`docker compose up`.

No more manual key generation required.

--- a/.env.compose
+++ b/.env.compose
@@ -1,8 +1,19 @@
+# =============================================================================
+# Larafeed Configuration
+# =============================================================================
+# This file contains the base configuration for Larafeed.
+# Secrets (APP_KEY, IMGPROXY_KEY, IMGPROXY_SALT) are auto-generated on first
+# run and stored in .secrets/.env.generated
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Application Settings
+# -----------------------------------------------------------------------------
 APP_NAME=Larafeed
 APP_ENV=production
-APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
+# Change this to your domain (e.g., https://feeds.example.com)
 APP_URL=http://localhost:8000
 
 APP_LOCALE=en
@@ -10,11 +21,17 @@ APP_FALLBACK_LOCALE=en
 
 BCRYPT_ROUNDS=12
 
+# -----------------------------------------------------------------------------
+# Logging
+# -----------------------------------------------------------------------------
 LOG_CHANNEL=errorlog
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# -----------------------------------------------------------------------------
+# Database (PostgreSQL)
+# -----------------------------------------------------------------------------
 DB_CONNECTION=pgsql
 DB_HOST=postgres
 DB_PORT=5432
@@ -23,6 +40,9 @@ DB_DATABASE=larafeed
 DB_USERNAME=postgres
 DB_PASSWORD=
 
+# -----------------------------------------------------------------------------
+# Session & Cache (Redis)
+# -----------------------------------------------------------------------------
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -44,15 +64,29 @@ REDIS_PORT=6379
 
 VITE_APP_NAME="${APP_NAME}"
 
+# -----------------------------------------------------------------------------
+# Optional: AI Summaries (Gemini)
+# -----------------------------------------------------------------------------
+# Get your API key at https://aistudio.google.com/apikey
 GEMINI_API_KEY=
 
+# -----------------------------------------------------------------------------
+# Optional: Telegram Notifications
+# -----------------------------------------------------------------------------
+# Get notified on user registration and failed login attempts
 # TELEGRAM_BOT_TOKEN=
 # TELEGRAM_CHAT_ID=
 
+# -----------------------------------------------------------------------------
+# Optional: Error Tracking (Sentry)
+# -----------------------------------------------------------------------------
 # SENTRY_LARAVEL_DSN=
 # SENTRY_TRACES_SAMPLE_RATE=1.0
 # SENTRY_PROFILES_SAMPLE_RATE=1.0
 
-IMGPROXY_KEY=
-IMGPROXY_SALT=
+# -----------------------------------------------------------------------------
+# Image Proxy (imgproxy)
+# -----------------------------------------------------------------------------
+# Keys are auto-generated on first run.
+# Change this to your public imgproxy URL in production.
 IMGPROXY_URL=http://localhost:8080
