fix: use runtime env vars for Datadog RUM
Move Datadog RUM config from build-time VITE_* env vars to runtime
DD_RUM_* env vars. This allows configuration without rebuilding.

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,10 @@ SENTRY_PROFILES_SAMPLE_RATE=
 IMGPROXY_KEY=
 IMGPROXY_SALT=
 IMGPROXY_URL=
+
+# Datadog RUM (optional)
+DD_RUM_APPLICATION_ID=
+DD_RUM_CLIENT_TOKEN=
+DD_RUM_SITE=datadoghq.eu
+DD_RUM_SERVICE=larafeed
+DD_RUM_ENV=production
