--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     },
     "devDependencies": {
         "@biomejs/biome": "^2.3.10",
-        "lefthook": "^2.0.13",
         "@datadog/browser-rum": "^6.25.1",
         "@gfazioli/mantine-split-pane": "^1.1.5",
         "@headlessui/react": "^2.2.9",
@@ -33,6 +32,7 @@
         "concurrently": "^9.2.1",
         "dayjs": "^1.11.19",
         "laravel-vite-plugin": "^2.0",
+        "lefthook": "^2.0.13",
         "postcss": "^8.5.6",
         "postcss-preset-mantine": "^1.18.0",
         "postcss-simple-vars": "^7.0.1",
@@ -43,5 +43,8 @@
         "recharts": "^2.15.4",
         "typescript": "^5.9.3",
         "vite": "^7.3"
+    },
+    "dependencies": {
+        "query-string": "^9.3.1"
     }
 }
