fix: add gnupg package for caddy repo setup

--- a/deploy/Dockerfile.caddy-fpm
+++ b/deploy/Dockerfile.caddy-fpm
@@ -33,6 +33,7 @@ RUN apt-get update; \
     apt-utils \
     curl \
     git \
+    gnupg \
     ca-certificates \
     supervisor \
     debian-keyring \
