fix: use port 9000 for php-fpm instead of socket

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -71,7 +71,7 @@ http {
 
         # PHP handling
         location ~ \.php$ {
-            fastcgi_pass unix:/var/run/php-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include fastcgi_params;
             fastcgi_hide_header X-Powered-By;
