feat: add two-factor authentication with Laravel Fortify
Add TOTP-based 2FA support using Laravel Fortify:
- Enable/disable 2FA with QR code setup flow
- Recovery codes for backup access
- Password confirmation required for viewing recovery codes and disabling 2FA
- 2FA challenge during login when enabled

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "echolabsdev/prism": "^0.99",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel-notification-channels/telegram": "^6.0",
+        "laravel/fortify": "^1.33",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.6",
         "laravel/pennant": "^1.14",
